...
            android:indeterminate="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/mainImage" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/upvoteButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainImage"
            tools:ignore="HardcodedText" /> <!-- dynamically updated -->

        <TextView
            android:id="@+id/cityCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:paddingEnd="20dp"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/upvotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/featured"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/colorText"
...
            android:drawableTint="@android:color/white"
            android:onClick="vote"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/vote"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/moreMenu"
            app:layout_constraintTop_toBottomOf="@+id/mainImage"
            tools:targetApi="m" />

        <ImageButton
            android:id="@+id/moreMenu"
            android:layout_width="35dp"
...
            android:text="@string/pictures"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map" />

        <Button
            android:id="@+id/addPictureButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:drawablePadding="10dp"
...
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map"
            tools:targetApi="m" />

        <HorizontalScrollView
            android:id="@+id/imgSlider"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:scrollbarFadeDuration="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photoTitle">

            <LinearLayout
                android:id="@+id/imageLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            </LinearLayout>

...
            android:text="@string/user_reviews"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgSlider" />

        <Button
            android:id="@+id/addReviewButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:drawablePadding="10dp"
...
            android:padding="10dp"
            android:scrollbars="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reviewsTitle" />

        <TextView
            android:id="@+id/nearbyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/nearby"
            android:textSize="20sp"
...
