...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ch.epfl.sweng.fiktion.views.AddPOIActivity">

    <ScrollView
        android:id="@+id/add_poi_scroll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

...
            android:id="@+id/add_poi_scroll_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <Button
                android:id="@+id/add_poi_fiction_button"
                android:layout_width="60dp"
                android:layout_height="32dp"
                android:layout_marginEnd="22dp"
                android:layout_marginTop="48dp"
                android:background="@color/colorPrimary"
                android:onClick="addFiction"
...
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/in_fiction" />

                    <EditText
                        android:id="@+id/add_poi_fiction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:ems="10"
                        android:hint="@string/add_poi_fiction"
                        android:inputType="text"
...
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Latitude" />

                    <EditText
                        android:id="@+id/add_poi_latitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:ems="10"
                        android:hint="@string/latitude_example"
                        android:inputType="text"
...
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Longitude" />

                    <EditText
                        android:id="@+id/add_poi_longitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:ems="10"
                        android:hint="@string/longitude_example"
                        android:inputType="text"
...
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/City" />

                    <EditText
                        android:id="@+id/add_poi_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:ems="10"
                        android:hint="@string/city_example"
                        android:inputType="text"
...
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Country" />

                    <EditText
                        android:id="@+id/add_poi_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:ems="10"
                        android:hint="@string/country_example"
                        android:inputType="text"
...
                    android:ems="10"
                    android:hint="@string/add_description_to_point"
                    android:inputType="textMultiLine"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/add_poi_finish"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="10dp"
...
