...
    <string name="title_activity_location">Nearby</string>
    <string name="invalid_email_error">Requires a valid email</string>
    <string name="invalid_password_error">Password must be at least 6 characters</string>
    <string name="toast_authentication_failed">Authentication Failed</string>
    <string name="gps_network_not_enabled">GPS location is not enabled.</string>
    <string name="open_location_settings">Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="add_poi_name">ex: Akihabara</string>
    <string name="add_poi_fiction">ex: Steins;Gate</string>
    <string name="add_poi_position_wiki">From wiki link</string>
    <string name="enter_wikipedia_link">Enter a link to a Wikipedia article that contains coordinates :</string>
    <string name="wikipedia_link">Enter a Wikipedia link…</string>
    <string name="get_coordinates">Get coordinates</string>
...
    <string name="Description">Description</string>
    <string name="login">Login or register account</string>
    <string name="loading_text">Loading…</string>
    <string name="no_results_found">No results found</string>
    <string name="no_nearby_places_found">No nearby places found.</string>
    <string name="actions">actions</string>
    <string name="Favourite">Favourite</string>
    <string name="Wishlist">Wishlist</string>
    <string name="Edit">Edit</string>
    <string name="loading_data">Loading data …</string>
    <string name="data_not_found">Data not found.</string>
    <string name="failed_to_fetch_data">Failed to fetch data.</string>
    <string name="no_reviews_yet">No reviews yet. Write some?</string>
    <string name="load_more">Load more …</string>
    <string name="background">Background</string>
...
