...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reviewDescription"
        tools:ignore="Overdraw">

        <EditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/review_text_input"
            android:inputType="textMultiLine"
            android:textSize="16sp" />

        <Button
            android:id="@+id/uploadCommentButton"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary"
            android:elevation="5dp"
...
